<resources>
    <string name="app_name">StreamEase</string>
    <string name="select_quality">Select Quality</string>
    <string name="cancel">CANCEL</string>
    <string name="previws">PREVIWS:</string>
    <string name="all_fields_mandatory">all_fields_mandatory\n</string>
    <string name="invalid_email">invalid_email\n</string>
    <string name="invalid_password">invalid_password\n</string>
    <string name="signup_successful">signUp_successful</string>
    <string name="signup_failed">sign_up failed\n</string>
    <string name="user_exists">user_exists\n</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_strength">Password strength</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="user_photo">USER PHOTO</string>
    <string name="default_name">No name found</string>
    <string name="default_place">no place found</string>
    <string name="default_branch">no branch found\n</string>
    <string name="edit_details">EDIT DETAILS</string>
    <string name="name">ENTER YOUR NAME</string>
    <string name="place">ENTER YOU PLACE</string>
    <string name="branch">ENTER YOUR BRANCH</string>
    <string name="contact_number">ENTER YOUR CONTACT NUMBER</string>
    <string name="submit">SUBMIT</string>
    <string name="see_saved_videos">See Saved Videos</string>
    <string name="sign_out">Sign OUT</string>
</resources>