<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Dark_grey"
        android:padding="20dp"
        tools:context=".UserProfile">

        <!-- User Name -->
        <TextView
            android:id="@+id/user_nameN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/default_name"
            android:textColor="@color/light_black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <!-- User Place -->
        <TextView
            android:id="@+id/user_placeN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/default_place"
            android:textColor="@color/lighter_black"
            android:textSize="28sp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center" />

        <!-- User Branch -->
        <TextView
            android:id="@+id/user_branchN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/default_branch"
            android:textColor="@color/lighter_black"
            android:textSize="28sp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center" />

        <!-- Edit Details Button -->
        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/light_black"
            android:text="@string/edit_details"
            android:textColor="@color/dark_white"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp" />

        <Button
            android:id="@+id/See_saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/lighter_black"
            android:text="@string/see_saved_videos"
            android:textColor="@color/dark_white"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>
