<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context=".Login">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <!-- Login Form Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="450dp"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- Email Input Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hintEnabled="true"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/light_black"
                    android:padding="5dp"
                    app:hintTextColor="@color/lighter_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_white"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="8dp"
                        android:textColor="@color/light_black"
                        android:textColorHint="@color/lighter_black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Input Field with Eye Icon -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:endIconMode="password_toggle"
                    android:padding="5dp"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/light_black"
                    app:hintTextColor="@color/lighter_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:background="@color/dark_white"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="8dp"
                        android:textColor="@color/light_black"
                        android:textColorHint="@color/lighter_black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Login Button -->
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/light_black"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/login"
                    android:textColor="@color/dark_white"
                    android:textSize="18sp"
                    app:cornerRadius="30dp" />

                <!-- Forgot Password -->


                <!-- Signup Redirect -->
                <TextView
                    android:id="@+id/signupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/not_yet_registered_signup"
                    android:textColor="@color/dark_white"
                    android:textSize="16sp" />

            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
        </LinearLayout>

</layout>